--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
       - store_artifacts: # store the jar as artifact
           path: target/ReflectDB/ReflectDB.jar
 
+      - run:
+          name: Deploy via SSH
+          command: |
+            ssh $SSH_USER@$SSH_HOSTNAME "cp /target/ReflectDB/ReflectDB.jar /var/www/html/gserve.org/ReflectDB/ReflectDB-latest.jar"
+
       - save_cache:
           paths:
             - ~/.m2
