Add deploy via rsync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
       - store_artifacts: # store the jar as artifact
           path: target/ReflectDB/ReflectDB.jar
 
+      -run:
+        name: Deploy to remote server
+        command: |
+          rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
+
       - save_cache:
           paths:
             - ~/.m2
