Add deploy via rsync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,6 @@ jobs:
 
     steps:
       - checkout
-
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -32,7 +31,7 @@ jobs:
           path: target/ReflectDB/ReflectDB.jar
 
       -run:
-        name: Deploy to remote server
+        name: "Deploy to remote server"
         command: |
           rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
 
