Add deploy via rsync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,9 +31,8 @@ jobs:
           path: target/ReflectDB/ReflectDB.jar
 
       - run:
-        name: Deploy to remote server
-        command: |
-         - rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
+          name: Deploy to remote server
+          command: rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
 
       - save_cache:
           paths:
