Add deploy via rsync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,9 @@ jobs:
       - run: mvn package
       - store_artifacts: # store the jar as artifact
           path: target/ReflectDB/ReflectDB.jar
-
+      - run:
+          name: Install rsync
+          command: sudo apt update sudo apt install rsync
       - run:
           name: Deploy to remote server
           command: rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
