--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
       - run:
           name: Install rsync
           command: sudo apt install rsync
+      - add_ssh_keys:
+          fingerprints:
+            - "d7:f8:a5:34:85:cd:f7:28:c1:3f:2c:ef:a5:98:42:d3"
       - run:
           name: Deploy to remote server
           command: rsync -avz --delete /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
