--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,11 +35,10 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "d7:f8:a5:34:85:cd:f7:28:c1:3f:2c:ef:a5:98:42:d3"
-      - run: echo $REMOTE_HOSTKEY >> ~/.ssh/known_hosts
       - run:
           name: Deploy to remote server
           command: |
-            rsync -avz --delete ssh /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
+            rsync -avze --delete ssh -o StrictHostKeyChecking=no /home/circleci/repo/target/ReflectDB/ReflectDB.jar ${SSH_USER}@${SSH_HOSTNAME}:${DEPLOY_PATH}
 
       - save_cache:
           paths:
