--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,20 @@
     <groupId>org.gserve</groupId>
     <artifactId>reflectdb</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>ReflectDB</name>
+    <description>Lightweight ORM and database utility tool.</description>
     <url>https://www.github.com/dustinkredmond/ReflectDB</url>
+    <licenses>
+        <license>
+            <name>GNU General Public License V3.0</name>
+            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <scm>
+        <url>scm:git:git://github.com/dustinkredmond/ReflectDB.git</url>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
