--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.gserve</groupId>
     <artifactId>reflectdb</artifactId>
-    <version>2.0.4</version>
+    <version>2.0.4-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>ReflectDB</name>
     <description>Lightweight ORM and database utility tool.</description>
